# cmake_toolbox

./: .clang-tidy  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  cmock.yml  gcovr.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: instructions.md
.github/workflows/: ci.yml
build_check/: cmake_toolboxConfig.cmake  cmake_toolboxConfigVersion.cmake
build_check/examples/example_test.dir/: cmock.yml
build_check/examples/sanitizer_test/: DartConfiguration.tcl
cmake/: CMockSchema.cmake  CTestCustom.cmake.in  CTestFullOutput.cmake  Ceedling.cmake  ClangFormat.cmake  ClangFormatCheck.cmake  ClangFormatCheck.cmake.in  ClangTidy.cmake  CompileCommands.cmake  Cppcheck.cmake  DiscoverTests.cmake  FindCException.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindGcovr.cmake  FindIWYU.cmake  FindJq.cmake  FindUnity.cmake  Gcov.cmake  GcovrSchema.cmake  IWYU.cmake  Policy.cmake  Sanitizer.cmake  TestHelpers.cmake  Unity.cmake  ceedling.cmake  ceedlingDiscoverTests.cmake  clangformat.cmake  clangtidy.cmake  cmake_toolboxConfig.cmake.in  compilecommands.cmake  discovertests.cmake  gcov.cmake  sanitizer.cmake  unity.cmake
cmake/internal/: ClangTidyWrapper.cmake  CppcheckWrapper.cmake  IWYUWrapper.cmake  TrimCompileCommandsHelper.cmake  VerifyCompileCommandsHelper.cmake
cmake/schemas/: cmock-2.6.cmake  gcovr-7.0.cmake  gcovr-8.0.cmake
docs/: clangformat.md  consumption.md  cppcheck-iwyu-example.md  cppcheck.md  iwyu.md
examples/: CMakeLists.txt
examples/find_package_consumer/: CMakeLists.txt  consumer_example.c
examples/include/: dependency.h  example.h  example_cexception.h
examples/source/: example.c  example_cexception.c
examples/unit_test/: test_example.c  test_example_cexception.c  test_policy.cmake
unit_tests/: README.md
unit_tests/clangformat/: README.md  test_basic_functionality.cmake  test_check_script_fail_fast.cmake  test_configuration.cmake  test_edge_cases.cmake  test_file_discovery.cmake  test_file_exclusion.cmake  test_regex_exclusion.cmake  test_target_creation.cmake  test_utility_functions.cmake
unit_tests/clangtidy/: README.md  test_config_file_valid.cmake  test_configure_global.cmake  test_configure_target.cmake  test_find_clangtidy_supported_versions.cmake
unit_tests/cmockschema/: README.md  test_detect_version.cmake  test_generate_config.cmake  test_set_defaults.cmake  test_supported_versions.cmake
unit_tests/compilecommands/: README.md  test_trim_basic.cmake  test_trim_blacklist.cmake  test_trim_clangtidy_compat.cmake  test_trim_error_handling.cmake
unit_tests/cppcheck/: README.md  test_build_sources_clean.cmake  test_build_sources_violations.cmake  test_configure_advisory.cmake  test_configure_strict_fails.cmake  test_configure_target_basic.cmake  test_enable_suppress_flags.cmake  test_exclude_patterns.cmake  test_find_cppcheck.cmake  test_status_off.cmake
unit_tests/discover_tests/: test_paths_with_spaces.cmake
unit_tests/findcexception/: README.md  test_find_cexception.cmake
unit_tests/findunity/: README.md  test_hint_safety.cmake
unit_tests/gcov/: CMakeLists.txt  README.md  dummy.c  test_error_handling.cmake  test_scope_parameter.cmake  test_thresholds.cmake
unit_tests/gcov/_thresholds_temp/100_branch/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/100_decision/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/100_function/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/100_line/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/all_thresholds_off/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/all_thresholds_on/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/config_file_mode/src/: CMakeLists.txt  gcovr.cfg
unit_tests/gcov/_thresholds_temp/enforce_no_thresholds/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/enforce_off/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/status_message_format/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/zero_branch/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/zero_decision/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/zero_function/src/: CMakeLists.txt
unit_tests/gcov/_thresholds_temp/zero_line/src/: CMakeLists.txt
unit_tests/gcovrschema/: README.md  test_detect_version.cmake  test_generate_config.cmake  test_real_gcovr.cmake  test_set_defaults.cmake  test_supported_versions.cmake  test_validate.cmake
unit_tests/integration/: README.md
unit_tests/integration/ceedling/: test_gcovr_post_run.cmake
unit_tests/integration/cexception/: test_cexception_integration.cmake
unit_tests/integration/clangformat/: test_configuration.cmake
unit_tests/integration/clangtidy/: test_configuration.cmake
unit_tests/integration/compilecommands/: test_trim.cmake
unit_tests/integration/consumption/: test_add_subdirectory.cmake  test_fetchcontent.cmake  test_find_package.cmake
unit_tests/integration/cppcheck/: README.md  test_configuration.cmake
unit_tests/integration/ctest/: test_junit_output.cmake
unit_tests/integration/findunity/: test_find_package.cmake
unit_tests/integration/gcov/: test_compiler_compat.cmake  test_config_file_mode.cmake  test_schema_defaults.cmake  (+1 more)
unit_tests/iwyu/: README.md  test_additional_args.cmake  test_build_advisory_no_tool.cmake  test_build_configure_global.cmake  test_build_sources_clean.cmake  test_build_sources_violations.cmake  test_configure_advisory.cmake  test_configure_strict_fails.cmake  test_configure_target_basic.cmake  test_configure_target_missing_advisory.cmake  test_configure_target_strict_fails.cmake  test_cxx_only.cmake  test_exclude_patterns.cmake  test_find_iwyu.cmake  test_mapping_file_handling.cmake
unit_tests/policy/: README.md  run_all_tests.cmake  test_basic_operations.cmake  test_edge_cases.cmake  test_error_handling.cmake  test_get_fields.cmake  test_policy_info.cmake  test_policy_version.cmake  test_policy_warnings.cmake  test_warning_handling.cmake
unit_tests/sanitizer/: CMakeLists.txt  README.md  dummy.c  test_flag_combinations.cmake  test_parameter_validation.cmake
(+8 files in other folders)
